# flask-todo-app

./: README.md  pyproject.toml
src/flask_todo_app/: app.py
src/flask_todo_app/templates/: base.html
