[tool.poetry]
name = "flask-todo-app"
version = "0.1.0"
description = "A TODO app in Flask"
authors = ["Andrew Casey <accasey@hotmail.com.au>"]
license = "MIT"
readme = "README.md"
homepage = "https://ithub.com/accasey/flask-todo-app.git"
repository = "git@github.com:accasey/flask-todo-app.git"
keywords = ["Flask TODO"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
